kii/glue/static/default/glue/scss/app.scss
@import "settings";
@import "foundation";
@import "foundation-icons";

// Or selectively include components
// @import
//   "foundation/components/accordion",
//   "foundation/components/alert-boxes",
//   "foundation/components/block-grid",
//   "foundation/components/breadcrumbs",
//   "foundation/components/button-groups",
//   "foundation/components/buttons",
//   "foundation/components/clearing",
//   "foundation/components/dropdown",
//   "foundation/components/dropdown-buttons",
//   "foundation/components/flex-video",
//   "foundation/components/forms",
//   "foundation/components/grid",
//   "foundation/components/inline-lists",
//   "foundation/components/joyride",
//   "foundation/components/keystrokes",
//   "foundation/components/labels",
//   "foundation/components/magellan",
//   "foundation/components/orbit",
//   "foundation/components/pagination",
//   "foundation/components/panels",
//   "foundation/components/pricing-tables",
//   "foundation/components/progress-bars",
//   "foundation/components/reveal",
//   "foundation/components/side-nav",
//   "foundation/components/split-buttons",
//   "foundation/components/sub-nav",
//   "foundation/components/switches",
//   "foundation/components/tables",
//   "foundation/components/tabs",
//   "foundation/components/thumbs",
//   "foundation/components/tooltips",
//   "foundation/components/top-bar",
//   "foundation/components/type",
//   "foundation/components/offcanvas",
//   "foundation/components/visibility";

* {
    box-sizing:border-box;
    -moz-box-sizing:border-box;
    -webkit-box-sizing:border-box;
}

.top-bar {
    margin-bottom: 3rem;
}

code {
    border: none;
    background-color: #EEEEEE;
    
}
code.code {
    background-color: transparent;
}
.code > pre, blockquote {
    background-color: #EEEEEE;
    font-size: 1rem;
    padding: 0.5rem;
    margin: 2rem 0;
    overflow-x: scroll;
}
// icons

i[class^="fi-"] {
    margin-right:  0.5rem;
}

.actions {
    list-style-type: none;
    margin-left: 0
}

.date {
    @include label;
}

.button, button, input[type="submit"] {
    @include button;
}
form {
    max-width: 50rem;
    display: block;
    margin: 0 auto;
}

textarea {
    min-height: 10rem;
}
// streams 

.stream.info  {
    max-width: $content-width;
    margin: 0 auto; 
}
article.stream-item {
    max-width: $content-width;
    margin: 0 auto; 
    border-bottom: 1px solid $gainsboro;
    padding: 4rem 0;

    .title {
        letter-spacing: -2px;
        font-size: 3rem;
        font-weight: bold; 
        line-height: 1;
        a, a:hover {
            color: #2E3437;
        }
    }
    .main {

        .content {
            margin: 2rem 0;
            h1 {
                padding-bottom: 1rem;
                border-bottom: 1px solid $gainsboro;
            }
        }
    }
}

.meta {
    @include panel; 
}
.publication, .actions, .date,  {
    font-family: "Open Sans", sans-serif;
}
.tabs > dd {
    border: 3px solid $silver;
}

// comments 

#comments {
    list-style-type: none;
    margin-left: 0;
}
.comment {
    padding: 1rem;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
    margin-bottom: 2rem;
    .author {
        font-weight: bold;
    }
    .content {
        h1 {
            font-size: 2.2rem;
        }
        h2 {
            font-size: 1.9rem;
        }
        h3 {
            font-size: 1.7rem;
        }
        h4 {
            font-size: 1.5rem;
        }
        h5 {
            font-size: 1.3rem;
        }
        h6 {
            font-size: 1.1rem;
        }
        h1, h2, h3, h4, h5, h6 {
            color: #666;
        }
        p:last-child {
            margin-bottom: 0;
        }

    }
}

